unpackaged/main/default/objects/Account/fields/AccountReference__c.field-meta.xml
<CustomField>
    <fullName>AccountReference__c</fullName>
    <description>Custom account reference - integrated with Zoey platform</description>
    <label>Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>