unpackaged/main/default/objects/Account/fields/ActiveFlag__c.field-meta.xml
<CustomField>
    <fullName>ActiveFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to identify if the account is currently active</description>
    <label>Active Flag</label>
    <type>Checkbox</type>
</CustomField>