unpackaged/main/default/objects/Account/fields/ActiveServices__c.field-meta.xml
<CustomField>
    <fullName>ActiveServices__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of active services - integrated with Zoey platform. Default 0</description>
    <label>Active Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>