unpackaged/main/default/objects/Account/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <description>Billing address</description>
    <formula>IF(ISBLANK(BillingAddressLine1__c),&#39;&#39;,BillingAddressLine1__c + BR())
+ IF(ISBLANK(BillingAddressLine2__c),&#39;&#39;,BillingAddressLine2__c + BR())
+ IF(ISBLANK(BillingAddressLine3__c),&#39;&#39;,BillingAddressLine3__c + BR())
+ IF(ISBLANK(BillingAddressLine4__c),&#39;&#39;,BillingAddressLine4__c + BR())
+ IF(ISBLANK(BillingAddressPostcode__c ),&#39;&#39;,BillingAddressPostcode__c)</formula>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>