unpackaged/main/default/objects/Account/fields/BillingAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressLine1__c</fullName>
    <description>Billing Address Line 1 - integrated with Zoey platform</description>
    <label>Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>