unpackaged/main/default/objects/Account/fields/BillingAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressLine2__c</fullName>
    <description>Billing address line 2 - integrated with Zoey platform</description>
    <label>Line 2/City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>