unpackaged/main/default/objects/Account/fields/BillingAddressLine3__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressLine3__c</fullName>
    <description>Billing Address Line 3 - integrated with Zoey platform</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>