unpackaged/main/default/objects/Account/fields/BillingAddressPostcode__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressPostcode__c</fullName>
    <description>Billing Address Postcode - integrated with Zoey platform</description>
    <label>Postcode/ZIP/A2 CC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>