unpackaged/main/default/objects/Account/fields/CommissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>CommissionPercentage__c</fullName>
    <description>Commission percentage an external referrer can earn where the type is percentage revenue</description>
    <label>Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>