unpackaged/main/default/objects/Account/fields/CommissionStructure__c.field-meta.xml
<CustomField>
    <fullName>CommissionStructure__c</fullName>
    <description>Commission structure for external referrer account records</description>
    <label>Commission Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Percentage Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>