unpackaged/main/default/objects/Account/fields/Credit_Control_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Credit_Control_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Excludes the account from automated credit control emails</description>
    <inlineHelpText>Excludes the account from automated credit control emails</inlineHelpText>
    <label>Credit Control Opt Out</label>
    <type>Checkbox</type>
</CustomField>