unpackaged/main/default/objects/Account/fields/Data_Imported__c.field-meta.xml
<CustomField>
    <fullName>Data_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Imported?</label>
    <type>Checkbox</type>
</CustomField>