unpackaged/main/default/objects/Account/fields/DefContractTerm__c.field-meta.xml
<CustomField>
    <fullName>DefContractTerm__c</fullName>
    <description>DefContractTerm</description>
    <label>Default Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days (Liberty 90)</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>