unpackaged/main/default/objects/Account/fields/DefSpendCaps__c.field-meta.xml
<CustomField>
    <fullName>DefSpendCaps__c</fullName>
    <description>Default spending cap</description>
    <label>Default Spend Caps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>