unpackaged/main/default/objects/Account/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <description>Account Email Address</description>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>