unpackaged/main/default/objects/Account/fields/ExternalReferrer__c.field-meta.xml
<CustomField>
    <fullName>ExternalReferrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>External Referrer who provided the original lead (if any)</description>
    <label>External Referrer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>EXTERNAL REFFERER MUST BE AN ACCOUNT RECORD OF TYPE = EXTERNAL REFERRER</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>External Referrer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>