unpackaged/main/default/objects/Account/fields/FixedCommissionAmount__c.field-meta.xml
<CustomField>
    <fullName>FixedCommissionAmount__c</fullName>
    <description>Fixed commission amount an external referrer can earn when the commission type is fixed fee</description>
    <label>Fixed Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>