unpackaged/main/default/objects/Account/fields/LossDate__c.field-meta.xml
<CustomField>
    <fullName>LossDate__c</fullName>
    <description>Date account was lost</description>
    <label>Loss Date</label>
    <type>Date</type>
</CustomField>