unpackaged/main/default/objects/Account/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <description>Reason the account was lost</description>
    <label>Loss Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>