unpackaged/main/default/objects/Account/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non disclosure agreement checkbox</description>
    <label>NDA</label>
    <type>Checkbox</type>
</CustomField>