unpackaged/main/default/objects/Account/fields/Oldest_Unpaid_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Unpaid_Invoice__c</fullName>
    <label>Oldest Unpaid Invoice</label>
    <type>Date</type>
</CustomField>