unpackaged/main/default/objects/Account/fields/PrimaryCostCentre__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCostCentre__c</fullName>
    <description>Primary Cost Centre - integrated with Zoey platform</description>
    <label>Primary Cost Centre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>