unpackaged/main/default/objects/Account/fields/ReopenedReWon__c.field-meta.xml
<CustomField>
    <fullName>ReopenedReWon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify if this account was previously lost and subsequently re-won</description>
    <label>Reopened / Re-Won</label>
    <type>Checkbox</type>
</CustomField>