unpackaged/main/default/objects/Account/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <description>Account tax type</description>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Consumer</fullName>
            </value>
            <value>
                <fullName>Domestic Business</fullName>
            </value>
            <value>
                <fullName>International Consumer</fullName>
            </value>
            <value>
                <fullName>International Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>