unpackaged/main/default/objects/Account/fields/Total_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Total_Overdue__c</fullName>
    <label>Total Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>