unpackaged/main/default/objects/Account/fields/Xero_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Xero_Contact_ID__c</fullName>
    <label>Xero Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>