unpackaged/main/default/objects/Account/fields/Zoey_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Zoey_Account_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zoey Account Created</label>
    <type>Checkbox</type>
</CustomField>