unpackaged/main/default/objects/Account/fields/Zoey_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Zoey_Closed_Date__c</fullName>
    <label>Zoey Closed Date</label>
    <type>Date</type>
</CustomField>