unpackaged/main/default/objects/Account/fields/ZoeyAccountCode__c.field-meta.xml
<CustomField>
    <fullName>ZoeyAccountCode__c</fullName>
    <description>Zoey Account Code - External ID for Zoey platform integration</description>
    <externalId>true</externalId>
    <inlineHelpText>Derived from Zoey</inlineHelpText>
    <label>Zoey Account Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>