unpackaged/main/default/objects/Account/fields/ZoeyRecordAddedDate__c.field-meta.xml
<CustomField>
    <fullName>ZoeyRecordAddedDate__c</fullName>
    <description>Date record added to Zoey</description>
    <label>Zoey Record Added Date</label>
    <type>DateTime</type>
</CustomField>