unpackaged/main/default/objects/Account/fields/ZoeyRecordUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>ZoeyRecordUpdatedDate__c</fullName>
    <description>Date record updated in the Zoey platform</description>
    <label>Zoey Record Updated Date</label>
    <type>DateTime</type>
</CustomField>