unpackaged/main/default/objects/Account/validationRules/Check_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Type</fullName>
    <active>true</active>
    <description>Check account type is populated</description>
    <errorConditionFormula>ISBLANK(TEXT(Type))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>TYPE MUST BE POPULATED</errorMessage>
</ValidationRule>