unpackaged/main/default/objects/Account/validationRules/Commission_Percentage_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Percentage_Check</fullName>
    <active>true</active>
    <description>Check commission percentage is populated when the commission structure = Percentage revenue</description>
    <errorConditionFormula>ISPICKVAL(CommissionStructure__c,&#39;Percentage Revenue&#39;)
&amp;&amp; ISNULL(CommissionPercentage__c)</errorConditionFormula>
    <errorDisplayField>CommissionPercentage__c</errorDisplayField>
    <errorMessage>COMMISSION PERCENTAGE MUST BE SET WHEN COMMISSION STRUCTURE = PERCENTAGE REVENUE</errorMessage>
</ValidationRule>