unpackaged/main/default/objects/Account/validationRules/Customer_Billing_Address_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Billing_Address_Check</fullName>
    <active>true</active>
    <description>A customer account type must have at least one address field populated</description>
    <errorConditionFormula>ISPICKVAL(Type,&#39;Customer&#39;)  
&amp;&amp; ISBLANK(BillingAddressLine1__c)
&amp;&amp; ISBLANK(BillingAddressLine2__c)
&amp;&amp; ISBLANK(BillingAddressLine3__c)
&amp;&amp; ISBLANK(BillingAddressLine4__c)</errorConditionFormula>
    <errorMessage>AT LEAST ONE BILLING ADDRESS FIELD MUST BE POPULATED TO SET THE ACCOUNT TO CUSTOMER TYPE</errorMessage>
</ValidationRule>