unpackaged/main/default/objects/Account/validationRules/Customer_Billing_Postcode_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Billing_Postcode_Check</fullName>
    <active>true</active>
    <description>Check billing postcode is created before an account can be set to customer type</description>
    <errorConditionFormula>ISPICKVAL(Type, &#39;Customer&#39;)
&amp;&amp; ISBLANK(BillingAddressPostcode__c)</errorConditionFormula>
    <errorMessage>BILLING ADDRESS POSTCODE MUST BE POPULATED BEFORE TYPE CAN BE SET TO CUSTOMER</errorMessage>
</ValidationRule>