unpackaged/main/default/objects/Account/validationRules/Customer_Tax_Type_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Tax_Type_Check</fullName>
    <active>true</active>
    <description>Check tax type is populated before account is set to Customer</description>
    <errorConditionFormula>ISPICKVAL(Type, &#39;Customer&#39;)
&amp;&amp; ISBLANK(TEXT(TaxType__c))</errorConditionFormula>
    <errorMessage>TAX TYPE MUST BE POPULATED BEFORE TYPE CAN BE SET TO CUSTOMER</errorMessage>
</ValidationRule>