unpackaged/main/default/objects/Account/validationRules/NATTERBOX_PERSONASST_PHONE.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_PERSONASST_PHONE</fullName>
    <active>true</active>
    <description>Check person assistant phone number is valid for use in Natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK(PersonAssistantPhone), REGEX(PersonAssistantPhone,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>PersonAssistantPhone</errorDisplayField>
    <errorMessage>INVALID TELEPHONE FORMAT</errorMessage>
</ValidationRule>