unpackaged/main/default/objects/Account/validationRules/NATTERBOX_PERSONHOME_PHONE.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_PERSONHOME_PHONE</fullName>
    <active>true</active>
    <description>Check person home phone number is valid for use in Natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK(PersonHomePhone), REGEX( PersonHomePhone ,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>PersonHomePhone</errorDisplayField>
    <errorMessage>INVALID TELEPHONE FORMAT</errorMessage>
</ValidationRule>