unpackaged/main/default/objects/Account/validationRules/NATTERBOX_PERSONMOB_PHONE.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_PERSONMOB_PHONE</fullName>
    <active>true</active>
    <description>Check person mobile number is valid for use in Natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK(PersonMobilePhone), REGEX(PersonMobilePhone,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>PersonMobilePhone</errorDisplayField>
    <errorMessage>INVALID TELEPHONE FORMAT</errorMessage>
</ValidationRule>