unpackaged/main/default/objects/Account/validationRules/NATTERBOX_PERSONOTH_PHONE.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_PERSONOTH_PHONE</fullName>
    <active>true</active>
    <description>Check person other phone number is valid for use in Natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK( PersonOtherPhone ), REGEX( PersonOtherPhone ,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>PersonOtherPhone</errorDisplayField>
    <errorMessage>INVALID TELEPHONE FORMAT</errorMessage>
</ValidationRule>