unpackaged/main/default/objects/Account/listViews/All_Commission_Earners.listView-meta.xml
<ListView>
    <fullName>All_Commission_Earners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CommissionStructure__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CommissionPercentage__c</columns>
    <columns>FixedCommissionAmount__c</columns>
    <columns>EmailAddress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.ExternalReferrer</value>
    </filters>
    <label>All Commission Earners</label>
</ListView>